# ralphthon-icml-team-ha

./: .gitignore  PHASED_ROLE_ARCHITECTURE_AND_AGENT_CONTRACTS.md  RALPH_REVIEW_AGENT_SYSTEM_PLAN_AND_TECHNICAL_SPEC_V2.md  README.md  bunfig.toml  docker-compose.yml  package.json  pyproject.toml
engine/validators/math/: g1-equation-check.schema.json  pyproject.toml
engine/validators/math/lean-container/: Dockerfile
engine/validators/math/math_validator/: __init__.py  __main__.py  coordinator.py  core.py  lean.py
engine/validators/math/tests/: test_math_validator.py
migrations/: 0000_database_core.sql  0001_execution_provenance_validation_and_threads.sql  0002_quarantine_before_projection.sql
openreview_icml2026_spotlight_analysis/: README.md
plans/: IMPLEMENTATION_PLAN.md  M1-RESULT.md  M2-RESULT.md  STATUS-BOARD.md
scripts/: integrate-poll.sh  integrate-spawn-lane.sh  integrate-verify-lane.sh  prepare-v2-paper-batch.py  run-10-paper-v2.sh  run-benchmark.sh  run-review.sh  run-v2-batch.sh  run-v2-live.sh  v2-capability-attestor  validate-run.sh
shared/: COMMON_AGENT_POLICY.md  ICML_2026_REVIEW_RUBRIC.md  canonical_jcs.py  event_log_append_v2.py
tests/: test_agent_loop_trace.py  test_author_system.py  test_benchmark_coordinator.py  test_contract_schemas.py  test_event_log_append_v2.py  test_event_v2_writer_boundaries.py  test_invocation_custody.py  test_live_batch_runner.py  test_publication_runtime.py  test_reviewer_calibration_profiles.py  test_reviewer_system.py  test_run_10_paper_v2.py  test_sandbox_policy_v2.py  test_sterile_launcher.py  (+2 more)
(+1037 files in other folders)
