[project]
name = "ralphthon-icml"
version = "0.1.0"
description = "ICML-style review simulation and scientific validation platform"
requires-python = ">=3.12"
dependencies = [
  "jsonschema>=4.23,<5",
]

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.9,<1",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
  "engine/extraction",
  "engine/validators",
]

[tool.pytest.ini_options]
testpaths = ["engine/extraction/tests", "engine/validators/tests", "tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
