[project]
name = "ralphthon-math-validator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "jsonschema>=4.23,<5",
  "sympy==1.14.0",
  "z3-solver==4.16.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.9,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100
